--- a/client/src/components-vp/vp-class-list/index.less
+++ b/client/src/components-vp/vp-class-list/index.less
@@ -1,8 +1,3 @@
 .vp-class-list-wrap {
-	.vp-class-list-title {
-	}
-	.vp-class-list-content {
-		.vp-class-list-value {
-		}
-	}
+	padding: 0 var(--padding-xs);
 }
