--- a/client/src/components/list-feed/show-style/base/index.less
+++ b/client/src/components/list-feed/show-style/base/index.less
@@ -1,6 +1,6 @@
 .base-wrap {
 	.base-item {
-		padding: var(--border-thin-space, 16px) var(--border-bold-space, 32px);
+		padding: var(--padding-xs) var(--padding-md);
 		display: flex;
 		flex-direction: row;
 		justify-content: flex-start;
