--- a/client/src/components/list-feed/show-style/moments/index.less
+++ b/client/src/components/list-feed/show-style/moments/index.less
@@ -1,6 +1,6 @@
 .moments-wrap {
 	.moments-item {
-		padding: var(--border-thin-space, 16px) var(--border-bold-space, 32px);
+		padding: var(--padding-xs) var(--padding-md);
 		display: flex;
 		flex-direction: row;
 		justify-content: flex-start;
@@ -22,7 +22,7 @@
 
 		.item-right {
 			flex: 1 1 auto;
-			margin-left: var(--border-thin-space, 16px);
+			margin-left: var(--padding-xs, 16px);
 
 			.item-author {
 				margin-bottom: var(--border-li-space, 4px);
