--- a/client/src/components/banner/index.less
+++ b/client/src/components/banner/index.less
@@ -1,8 +1,14 @@
 .banner-wrap {
-	.banner-title {
-	}
-	.banner-content {
-		.banner-value {
+	overflow: hidden;
+	border-radius: var(--border-radius-lg);
+	width: 100%;
+	height: 300px;
+	.banner-item {
+		width: 100%;
+		height: 100%;
+		.banner-image {
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
