--- a/client/src/components/page-content/base.less
+++ b/client/src/components/page-content/base.less
@@ -2,25 +2,25 @@
 
 page {
 	// 间距
-	--padding-base: 4px;
-	--padding-xs: 8px;
-	--padding-sm: 12px;
-	--padding-md: 16px;
-	--padding-lg: 24px;
+	--padding-base: 8px;
+	--padding-xs: 16px;
+	--padding-sm: 24px;
+	--padding-md: 32px;
+	--padding-lg: 48px;
 
 	// 圆角
-	--border-radius-sm: 2px;
-	--border-radius-md: 4px;
-	--border-radius-lg: 8px;
+	--border-radius-sm: 4px;
+	--border-radius-md: 8px;
+	--border-radius-lg: 16px;
 	--border-radius-max: 999px;
 
 	// 字号
-	--font-size-xs: 10px;
-	--font-size-sm: 12px;
-	--font-size-md: 14px;
-	--font-size-lg: 16px;
-	--font-size-xl: 18px;
-	--font-size-hd: 26px;
+	--font-size-xs: 20px;
+	--font-size-sm: 24px;
+	--font-size-md: 28px;
+	--font-size-lg: 32px;
+	--font-size-xl: 36px;
+	--font-size-hd: 40px;
 
 	// 颜色
 	--color-white: #ffffff;
@@ -140,5 +140,5 @@ page {
 
 .block-line {
 	width: 100%;
-	height: var(--border-thin-space);
+	height: var(--padding-xs);
 }
