feat(授权登录):搭建框架，调整基础组件，完善登录授权流程

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -6,6 +6,13 @@ $color-brand-dark: var(--color-primary);
 // 改变taro-ui的默认样式
 @import 'taro-ui/dist/style/index.scss';
 
+// 重写日历样式
 .flex__item--selected {
 	background-color: $color-brand !important;
+}
+
+// 重写浮动弹层样式
+.at-float-layout__container {
+	overflow: hidden;
+	border-radius: var(--border-radius-lg) var(--border-radius-lg) 0 0;
 }
