feat(班级):联调查询班级列表的接口

--- a/client/src/components/panel-bottom/index.less
+++ b/client/src/components/panel-bottom/index.less
@@ -1,11 +1,12 @@
 .panel-bottom-wrap {
 	position: relative;
+	z-index: 1;
 	flex-grow: 0;
 	flex-shrink: 0;
 
 	.panel-box {
 		box-sizing: border-box;
-		padding: var(--border-bold-space, 32px);
+		// padding: var(--border-bold-space, 32px);
 	}
 
 	.fixed-panel {
