--- a/client/src/components/banner/index.less
+++ b/client/src/components/banner/index.less
@@ -4,6 +4,8 @@
 	width: 100%;
 	height: 300px;
 	.banner-item {
+		overflow: hidden;
+		border-radius: var(--border-radius-lg);
 		width: 100%;
 		height: 100%;
 		.banner-image {
