--- a/client/src/components/list-moment/index.less
+++ b/client/src/components/list-moment/index.less
@@ -1,4 +1,4 @@
-.list-feed-wrap {
+.list-moment-wrap {
 	.border-bottom-line {
 		position: relative;
 
@@ -15,7 +15,7 @@
 		}
 	}
 
-	.list-feed-loading-tip {
+	.list-moment-loading-tip {
 		width: 100%;
 		height: 80px;
 		line-height: 80px;
