feat(班级):构建班级分页面的样式基本搭建

--- a/client/src/components-vp/vp-mine/index.less
+++ b/client/src/components-vp/vp-mine/index.less
@@ -1,3 +1,15 @@
 .vp-mine-wrap {
 	padding: 0 var(--padding-xs);
+	width: 100%;
+	box-sizing: border-box;
+
+	.mine-logo {
+		overflow: hidden;
+		border-radius: var(--border-radius-max);
+		width: 100px;
+		height: 100px;
+	}
+
+	.mine-title {
+	}
 }
