--- a/client/src/components/page-content/base.less
+++ b/client/src/components/page-content/base.less
@@ -12,7 +12,7 @@ page {
 	--border-radius-sm: 4px;
 	--border-radius-md: 8px;
 	--border-radius-lg: 16px;
-	--border-radius-max: 999px;
+	--border-radius-max: 50%;
 
 	// 字号
 	--font-size-xs: 20px;
