--- a/client/src/components/ModuleTitle/index.less
+++ b/client/src/components/ModuleTitle/index.less
@@ -1,24 +1,24 @@
 .module-title-wrap {
-	width: 100%;
-	height: 90px;
+  width: 100%;
+  height: 90px;
 
-	.module-title-content {
-		box-sizing: border-box;
-		position: relative;
-		height: 40px;
-		padding-left: var(--border-bold-space, 32px);
-		color: var(--color-text-long, #272637);
-		font-size: var(--f4);
+  .module-title-content {
+    box-sizing: border-box;
+    position: relative;
+    height: 40px;
+    padding-left: var(--border-bold-space, 32px);
+    color: var(--color-text-long, #272637);
+    font-size: var(--f4);
 
-		&::before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 8px;
-			height: 40px;
-			border-radius: 0 10px 10px 0;
-			background-color: var(--color-primary, #f7b500);
-		}
-	}
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 8px;
+      height: 40px;
+      border-radius: 0 10px 10px 0;
+      background-color: var(--color-primary, #228b22);
+    }
+  }
 }
