--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -1,144 +1,145 @@
 // 基础样式
 
 page {
-	// 间距
-	--padding-base: 8px;
-	--padding-xs: 16px;
-	--padding-sm: 24px;
-	--padding-md: 32px;
-	--padding-lg: 48px;
+  // 间距
+  --padding-base: 8px;
+  --padding-xs: 16px;
+  --padding-sm: 24px;
+  --padding-md: 32px;
+  --padding-lg: 48px;
 
-	// 圆角
-	--border-radius-sm: 4px;
-	--border-radius-md: 8px;
-	--border-radius-lg: 16px;
-	--border-radius-max: 50%;
+  // 圆角
+  --border-radius-sm: 4px;
+  --border-radius-md: 8px;
+  --border-radius-lg: 16px;
+  --border-radius-max: 50%;
 
-	// 字号
-	--font-size-xs: 20px;
-	--font-size-sm: 24px;
-	--font-size-md: 28px;
-	--font-size-lg: 32px;
-	--font-size-xl: 36px;
-	--font-size-hd: 40px;
+  // 字号
+  --font-size-xs: 20px;
+  --font-size-sm: 24px;
+  --font-size-md: 28px;
+  --font-size-lg: 32px;
+  --font-size-xl: 36px;
+  --font-size-hd: 40px;
+  --font-size-icon: 64px;
 
-	// 颜色
-	--color-white: #ffffff;
-	--color-gray-0: #000000;
-	--color-gray-1: #212121;
-	--color-gray-2: #424242;
-	--color-gray-3: #616161;
-	--color-gray-4: #9e9e9e;
-	--color-gray-5: #bdbdbd;
-	--color-gray-6: #e0e0e0;
-	--color-gray-7: #eeeeee;
-	--color-gray-8: #f5f5f5;
-	--color-gray-9: #fafafa;
+  // 颜色
+  --color-white: #ffffff;
+  --color-gray-0: #000000;
+  --color-gray-1: #212121;
+  --color-gray-2: #424242;
+  --color-gray-3: #616161;
+  --color-gray-4: #9e9e9e;
+  --color-gray-5: #bdbdbd;
+  --color-gray-6: #e0e0e0;
+  --color-gray-7: #eeeeee;
+  --color-gray-8: #f5f5f5;
+  --color-gray-9: #fafafa;
 }
 
 .safe-top {
-	padding-top: constant(safe-area-inset-top);
-	padding-top: env(safe-area-inset-top);
+  padding-top: constant(safe-area-inset-top);
+  padding-top: env(safe-area-inset-top);
 }
 
 .safe-left {
-	padding-left: constant(safe-area-inset-left);
-	padding-left: env(safe-area-inset-left);
+  padding-left: constant(safe-area-inset-left);
+  padding-left: env(safe-area-inset-left);
 }
 
 .safe-right {
-	padding-right: constant(safe-area-inset-right);
-	padding-right: env(safe-area-inset-right);
+  padding-right: constant(safe-area-inset-right);
+  padding-right: env(safe-area-inset-right);
 }
 
 .safe-bottom {
-	padding-bottom: constant(safe-area-inset-bottom);
-	padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .hidden {
-	display: none;
+  display: none;
 }
 
 .hidden-far {
-	position: relative;
-	top: -9999px;
-	left: -9999px;
+  position: relative;
+  top: -9999px;
+  left: -9999px;
 }
 
 .flex-center-h {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-center-v {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-between-h {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flex-between-v {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flex-around-h {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .flex-around-v {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .flex-start-h {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .flex-start-v {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .text-ellipsis {
-	display: block;
-	width: 100%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .text-justify {
-	text-align: justify;
+  text-align: justify;
 }
 
 .text-nowrap {
-	white-space: nowrap;
+  white-space: nowrap;
 }
 
 .block-line {
-	width: 100%;
-	height: var(--padding-xs);
+  width: 100%;
+  height: var(--padding-xs);
 }
