feat:(tabbar)调整底部导航的图标,并且增强兼容性

--- a/client/src/less/iconfont.less
+++ b/client/src/less/iconfont.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2366471 */
-  src: url("//at.alicdn.com/t/font_2366471_qoj33gog0n.woff2?t=1626536632221")
+  src: url("//at.alicdn.com/t/font_2366471_qqxexro4uv.woff2?t=1627053939690")
       format("woff2"),
-    url("//at.alicdn.com/t/font_2366471_qoj33gog0n.woff?t=1626536632221")
+    url("//at.alicdn.com/t/font_2366471_qqxexro4uv.woff?t=1627053939690")
       format("woff"),
-    url("//at.alicdn.com/t/font_2366471_qoj33gog0n.ttf?t=1626536632221")
+    url("//at.alicdn.com/t/font_2366471_qqxexro4uv.ttf?t=1627053939690")
       format("truetype");
 }
 
@@ -16,20 +16,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.iconbase-satellite-full:before {
+  content: "\e600";
+}
+
 .iconbase-station-full:before {
-  content: "\e94e";
+  content: "\e602";
+}
+
+.iconbase-satellite:before {
+  content: "\e603";
 }
 
 .iconbase-station:before {
-  content: "\e94f";
-}
-
-.iconsatellite-signal:before {
-  content: "\e95a";
-}
-
-.iconsatellite-signal-full:before {
-  content: "\e95b";
+  content: "\e604";
 }
 
 .iconbarrage_fill:before {
