feat:(Main)初步构建我的页面的基础样式

--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -8,6 +8,13 @@ page {
   --padding-md: 32px;
   --padding-lg: 48px;
 
+  // 间距
+  --margin-base: 8px;
+  --margin-xs: 16px;
+  --margin-sm: 24px;
+  --margin-md: 32px;
+  --margin-lg: 48px;
+
   // 圆角
   --border-radius-sm: 4px;
   --border-radius-md: 8px;
