--- a/client/src/pages/main/componentsVp/VpMine/index.less
+++ b/client/src/pages/main/componentsVp/VpMine/index.less
@@ -1,5 +1,15 @@
 .vp-mine-wrap {
   box-sizing: border-box;
-  padding: 0 var(--padding-xs);
   width: 100%;
+}
+
+.vp-mine-content {
+  box-sizing: border-box;
+  z-index: 1;
+  width: 100%;
+  padding: 0 var(--padding-xs);
+}
+
+.vp-mine-module-card {
+  margin-bottom: var(--margin-xs);
 }
