--- a/client/src/components/PageContent/index.less
+++ b/client/src/components/PageContent/index.less
@@ -1,12 +1,13 @@
 page {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-gray-8);
 }
 
 .page-content-wrap {
-	width: 100%;
-	.page-content-children {
-		width: 100%;
-		flex: 1;
-	}
+  width: 100%;
+  .page-content-children {
+    width: 100%;
+    flex: 1;
+  }
 }
