--- a/client/src/pages/main/componentsVp/VpClasses/index.less
+++ b/client/src/pages/main/componentsVp/VpClasses/index.less
@@ -1,3 +1,11 @@
 .vp-classes-wrap {
-	padding: 0 var(--padding-xs);
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.vp-classes-content {
+  box-sizing: border-box;
+  z-index: 1;
+  width: 100%;
+  padding: 0 var(--padding-xs);
 }
