--- a/client/src/pages/main/componentsVp/VpHome/index.less
+++ b/client/src/pages/main/componentsVp/VpHome/index.less
@@ -1,3 +1,15 @@
 .vp-home-wrap {
-	padding: 0 var(--padding-xs);
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.vp-home-content {
+  box-sizing: border-box;
+  z-index: 1;
+  width: 100%;
+  padding: 0 var(--padding-xs);
+}
+
+.at-calendar {
+  width: 100%;
 }
