--- a/client/src/pages/main/components/MainModuleHeader/index.less
+++ b/client/src/pages/main/components/MainModuleHeader/index.less
@@ -117,8 +117,7 @@
 }
 
 .module-header-block {
+  margin-bottom: -60px;
   width: 100%;
   height: 300px;
-
-  margin-bottom: calc(-1 * var(--margin-xs));
 }
