--- a/client/src/pages/main/componentsVp/VpWave/index.less
+++ b/client/src/pages/main/componentsVp/VpWave/index.less
@@ -1,5 +1,11 @@
 .vp-wave-wrap {
   box-sizing: border-box;
-  padding: 0 var(--padding-xs);
   width: 100%;
+}
+
+.vp-wave-content {
+  box-sizing: border-box;
+  z-index: 1;
+  width: 100%;
+  padding: 0 var(--padding-xs);
 }
