feat:(Login)优化鉴权登录相关流程

--- a/client/src/components/LayoutLogin/index.less
+++ b/client/src/components/LayoutLogin/index.less
@@ -1,8 +1,42 @@
-.layout-login-wrap {
-	.layout-login-title {
-	}
-	.layout-login-content {
-		.layout-login-value {
-		}
-	}
+.layout-login-panel {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.layout-login-title {
+  width: 100%;
+}
+
+.layout-login-icon {
+  margin-right: var(--margin-xs);
+  width: var(--font-size-lg);
+  height: var(--font-size-lg);
+  border-radius: 50%;
+  background-color: var(--color-primary);
+  font-size: var(--font-size-lg);
+  color: var(--color-white);
+}
+
+.layout-login-title-text {
+  text-align: left;
+  font-size: var(--font-size-lg);
+  color: var(--color-gray-1);
+}
+
+.layout-login-btn {
+  margin-top: var(--margin-lg);
+  margin-bottom: var(--margin-lg);
+}
+
+.layout-login-cancel {
+  box-sizing: border-box;
+  width: 100%;
+  height: 80px;
+}
+
+.layout-login-cancel-text {
+  text-align: center;
+  font-size: var(--font-size-sm);
+  color: var(--color-primary);
 }
