--- a/client/src/pages/main/componentsVp/VpMine/index.less
+++ b/client/src/pages/main/componentsVp/VpMine/index.less
@@ -5,11 +5,12 @@
 
 .vp-mine-content {
   box-sizing: border-box;
-  z-index: 1;
   width: 100%;
+  z-index: 1;
   padding: 0 var(--padding-xs);
 }
 
 .vp-mine-module-card {
+  z-index: inherit;
   margin-bottom: var(--margin-xs);
 }
