--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -2,6 +2,7 @@
 
 page {
   // 间距
+  --padding-mini: 4px;
   --padding-base: 8px;
   --padding-xs: 16px;
   --padding-sm: 24px;
@@ -9,6 +10,7 @@ page {
   --padding-lg: 48px;
 
   // 间距
+  --margin-mini: 4px;
   --margin-base: 8px;
   --margin-xs: 16px;
   --margin-sm: 24px;
