--- a/client/src/pages/main/componentsVp/VpTest/index.less
+++ b/client/src/pages/main/componentsVp/VpTest/index.less
@@ -1,11 +1,15 @@
-.vp-wave-wrap {
+.vp-home-wrap {
   box-sizing: border-box;
   width: 100%;
 }
 
-.vp-wave-content {
+.vp-home-content {
   box-sizing: border-box;
   z-index: 1;
   width: 100%;
   padding: 0 var(--padding-xs);
+}
+
+.at-calendar {
+  width: 100%;
 }
