--- a/client/src/pages/main/componentsVp/VpHome/index.less
+++ b/client/src/pages/main/componentsVp/VpHome/index.less
@@ -1,9 +1,9 @@
-.vp-wave-wrap {
+.vp-home-wrap {
   box-sizing: border-box;
   width: 100%;
 }
 
-.vp-wave-content {
+.vp-home-content {
   box-sizing: border-box;
   z-index: 1;
   width: 100%;
