--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -44,6 +44,8 @@ page {
   --color-gray-7: #eeeeee;
   --color-gray-8: #f5f5f5;
   --color-gray-9: #fafafa;
+
+  --color-red: #ef4136;
 }
 
 .safe-top {
