feat(HomeModuleWeather):完成天气展示模块样式以及对应交互

--- a/client/src/pages/main/components/HomeModuleWeather/index.less
+++ b/client/src/pages/main/components/HomeModuleWeather/index.less
@@ -1,4 +1,57 @@
 .module-weather-wrap {
+  box-sizing: border-box;
+  padding: var(--padding-xs);
   width: 100%;
   height: 160px;
+  border-radius: var(--border-radius-lg);
+  background-color: var(--color-primary);
+}
+
+.module-weather-title {
+  width: 100%;
+  height: 32px;
+}
+
+.module-weather-content-location {
+  color: var(--color-white);
+  font-size: var(--font-size-md);
+}
+
+.module-weather-content {
+  width: 100%;
+  height: 100%;
+}
+
+.module-weather-content-down {
+  width: 100%;
+}
+
+.module-weather-icon {
+  width: 100px;
+  height: 100px;
+}
+
+.module-weather-item {
+}
+
+.module-weather-item-title {
+  color: var(--color-white);
+  font-size: var(--font-size-sm);
+  font-weight: bold;
+}
+
+.module-weather-item-text {
+  color: var(--color-white);
+  font-size: var(--font-size-lg);
+}
+
+.module-weather-empty {
+  width: 100%;
+  height: 100%;
+}
+
+.module-weather-empty-text {
+  color: var(--color-white);
+  font-size: var(--font-size-xl);
+  font-weight: bold;
 }
