--- a/client/src/pages/main/componentsVp/VpHome/index.less
+++ b/client/src/pages/main/componentsVp/VpHome/index.less
@@ -9,3 +9,23 @@
   width: 100%;
   padding: 0 var(--padding-xs);
 }
+
+.vp-home-content-module {
+  position: relative;
+  margin-bottom: var(--margin-xs);
+}
+
+.module-calendar-btn-today {
+  padding: var(--padding-mini) var(--padding-xs);
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  // width: 100px;
+  // height: 60px;
+  color: var(--color-white);
+  background-color: var(--color-primary);
+  font-size: var(--font-size-sm);
+  line-height: 40px;
+  height: 48px;
+}
