--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,7 +1,7 @@
 /* 改变主题变量，具体变量名可查看 taro-ui/dist/style/variables/default.scss 文件 */
 $color-brand: var(--color-primary);
-$color-brand-light: var(--color-primary);
-$color-brand-dark: var(--color-primary);
+$color-brand-light: var(--color-primary-light);
+$color-brand-dark: var(--color-primary-dark);
 
 // 改变taro-ui的默认样式
 @import "taro-ui/dist/style/index.scss";
