feat(style):天气相关模块增加特效样式

--- a/client/src/components/Dialog/index.less
+++ b/client/src/components/Dialog/index.less
@@ -19,13 +19,15 @@
 }
 
 .dialog-panel-up {
+  box-sizing: border-box;
+  padding-bottom: 20px;
   width: 100%;
-  height: 220px;
+  height: 240px;
   background-image: linear-gradient(
-    135deg,
+    180deg,
     var(--color-primary),
-    80%,
-    var(--color-primary-light)
+    var(--color-primary) 90%,
+    var(--color-white)
   );
 }
 
@@ -53,7 +55,7 @@
 .dialog-panel-down {
   box-sizing: border-box;
   width: 100%;
-  height: 720px;
+  height: 700px;
 }
 
 .dialog-panel-footer {
