feat(share):完善分享\溯源等相关交互

--- a/client/src/pages/Main/componentsVp/VpHome/index.less
+++ b/client/src/pages/Main/componentsVp/VpHome/index.less
@@ -29,3 +29,10 @@
   line-height: 40px;
   height: 48px;
 }
+
+.vp-home-float-btn-panel {
+  position: fixed;
+  right: 80px;
+  bottom: 200px;
+  z-index: 10;
+}
