feat(MineModuleHeader):新增更新用户信息交互

--- a/client/src/components/LayoutLogin/index.less
+++ b/client/src/components/LayoutLogin/index.less
@@ -1,7 +1,14 @@
 .layout-login-panel {
   width: 100%;
-  height: 100%;
+  height: 484px;
   box-sizing: border-box;
+  padding-top: var(--padding-xs);
+  padding-left: var(--padding-xs);
+  padding-right: var(--padding-xs);
+}
+
+.layout-login-header {
+  width: 100%;
 }
 
 .layout-login-title {
@@ -24,9 +31,21 @@
   color: var(--color-gray-1);
 }
 
+.layout-login-content {
+  margin-top: var(--margin-md);
+  width: 100%;
+}
+
+.layout-login-content-text {
+  font-size: var(--font-size-lg);
+  color: var(--color-gray-1);
+}
+
+.layout-login-footer {
+  width: 100%;
+}
+
 .layout-login-btn {
-  margin-top: var(--margin-lg);
-  margin-bottom: var(--margin-lg);
 }
 
 .layout-login-cancel {
