--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -46,6 +46,9 @@ page {
   --color-gray-9: #fafafa;
 
   --color-red: #ef4136;
+  --color-golden-light: #fae89b;
+  --color-golden: #dac87b;
+  --color-golden-dark: #baa85b;
 }
 
 .safe-top {
@@ -136,7 +139,6 @@ page {
 
 .text-ellipsis {
   display: block;
-  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
