--- a/client/src/pages/Main/components/MineModuleHeader/index.less
+++ b/client/src/pages/Main/components/MineModuleHeader/index.less
@@ -89,12 +89,9 @@
 }
 
 .module-header-left {
-  flex: 0 0 auto;
+  position: relative;
+  flex: 0 0 120px;
   margin-right: var(--margin-md);
-}
-
-.module-header-left-logo {
-  box-sizing: border-box;
   overflow: hidden;
   border: 4px solid var(--color-white);
   border-radius: var(--border-radius-max);
@@ -102,9 +99,26 @@
   height: 120px;
 }
 
-.module-header-right {
+.module-header-left-logo {
   width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.module-header-logo-update {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 32px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: var(--color-white);
+  font-size: var(--font-size-sm);
+}
+
+.module-header-right {
   flex: 1 1 auto;
+  width: 0;
 }
 
 .module-header-right-up {
@@ -113,10 +127,32 @@
 }
 
 .module-header-right-up-name {
+  flex: 0 1 auto;
   margin-right: var(--margin-xs);
   text-align: left;
   font-size: var(--font-size-lg);
   color: var(--color-white);
+}
+
+.module-header-checked {
+  flex: 0 0 auto;
+  padding: var(--padding-mini) var(--padding-base);
+  text-align: center;
+  font-size: var(--font-size-xs);
+  line-height: var(--font-size-xs);
+  border-radius: var(--border-radius-md);
+}
+
+.checked-success {
+  background-color: var(--color-golden-light);
+  color: var(--color-golden-dark);
+  border: 2px solid var(--color-golden-dark);
+}
+
+.checked-fail {
+  background-color: var(--color-gray-7);
+  color: var(--color-gray-4);
+  border: 2px solid var(--color-gray-4);
 }
 
 .module-header-right-up-level {
