feat(Worker):新增Worker纬度概念

--- a/client/src/pages/Main/components/MineModuleHeader/index.less
+++ b/client/src/pages/Main/components/MineModuleHeader/index.less
@@ -113,7 +113,7 @@
   height: 32px;
   background-color: rgba(0, 0, 0, 0.3);
   color: var(--color-white);
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size-xs);
 }
 
 .module-header-right {
