feat(Worker/Task):关联员工与任务的数据交互

--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -46,9 +46,13 @@ page {
   --color-gray-9: #fafafa;
 
   --color-red: #ef4136;
+  --color-blue: #4444ff;
   --color-golden-light: #fae89b;
   --color-golden: #dac87b;
   --color-golden-dark: #baa85b;
+
+  --color-man: #469ddc;
+  --color-woman: #d32d7c;
 }
 
 .safe-top {
