--- a/client/src/less/iconfont.less
+++ b/client/src/less/iconfont.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2366471 */
-  src: url("//at.alicdn.com/t/font_2366471_edqtnfjrf5e.woff2?t=1627727181852")
+  src: url("//at.alicdn.com/t/font_2366471_56jslwjyo3f.woff2?t=1628324266033")
       format("woff2"),
-    url("//at.alicdn.com/t/font_2366471_edqtnfjrf5e.woff?t=1627727181852")
+    url("//at.alicdn.com/t/font_2366471_56jslwjyo3f.woff?t=1628324266033")
       format("woff"),
-    url("//at.alicdn.com/t/font_2366471_edqtnfjrf5e.ttf?t=1627727181852")
+    url("//at.alicdn.com/t/font_2366471_56jslwjyo3f.ttf?t=1628324266033")
       format("truetype");
 }
 
@@ -14,6 +14,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconboshimao:before {
+  content: "\e605";
+}
+
+.iconleft_double:before {
+  content: "\e675";
 }
 
 .iconweixin:before {
