--- a/client/src/pages/Main/components/HomeModuleWorker/index.less
+++ b/client/src/pages/Main/components/HomeModuleWorker/index.less
@@ -4,4 +4,21 @@
 
 .worker-item {
   width: 100%;
+  height: 140px;
+  border-bottom: 2px solid var(--color-gray-6);
+}
+
+.worker-item:last-child {
+  border-bottom: 0;
+}
+
+.worker-item-persion-arrow {
+  margin-right: var(--margin-xs);
+  height: 100%;
+  flex: 0 0 40px;
+}
+
+.worker-item-persion-arrow-icon {
+  font-size: var(--font-size-xl);
+  color: var(--color-gray-4);
 }
