feat(Home):完善主页的相关样式

--- a/client/src/pages/Main/components/HomeModuleWorker/index.less
+++ b/client/src/pages/Main/components/HomeModuleWorker/index.less
@@ -22,3 +22,14 @@
   font-size: var(--font-size-xl);
   color: var(--color-gray-4);
 }
+
+.module-worker-empty {
+  width: 100%;
+  height: 120px;
+}
+
+.module-worker-empty-text {
+  color: var(--color-gray-5);
+  font-size: var(--font-size-xl);
+  font-weight: bold;
+}
