--- a/client/src/pages/Main/componentsVp/VpMine/index.less
+++ b/client/src/pages/Main/componentsVp/VpMine/index.less
@@ -10,7 +10,26 @@
   padding: 0 var(--padding-xs);
 }
 
-.vp-mine-module-card {
+.vp-mine-module {
   z-index: inherit;
   margin-bottom: var(--margin-xs);
+}
+
+.vp-mine-module-self {
+  box-sizing: border-box;
+  padding: 0 var(--padding-md);
+}
+
+.vp-mine-module-self-item {
+}
+
+.vp-mine-module-self-item-up {
+  font-size: var(--font-size-md);
+  color: var(--color-gray-1);
+}
+
+.vp-mine-module-self-item-down {
+  margin-top: var(--margin-base);
+  font-size: var(--font-size-md);
+  color: var(--color-gray-1);
 }
