feat(EditWorker):新增编辑员工页面,并且重构ListNode公共组件

--- a/client/src/pages/Main/componentsVp/VpGroup/index.less
+++ b/client/src/pages/Main/componentsVp/VpGroup/index.less
@@ -1,9 +1,9 @@
-.vp-classes-wrap {
+.vp-group-wrap {
   box-sizing: border-box;
   width: 100%;
 }
 
-.vp-classes-content {
+.vp-group-content {
   box-sizing: border-box;
   z-index: 1;
   width: 100%;
