feat(Worker):新增分页查询员工列表以及对应的基本交互

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -18,6 +18,14 @@ $color-brand-dark: var(--color-primary-dark);
   background-color: $color-brand !important;
 }
 
+// 重写搜索栏样式
+.at-search-bar {
+  width: 100%;
+}
+.at-search-bar::after {
+  content: none;
+}
+
 // 重写浮动弹层样式
 .at-float-layout__container {
   overflow: hidden;
