--- a/client/src/components/PageContent/index.less
+++ b/client/src/components/PageContent/index.less
@@ -7,6 +7,7 @@ page {
 .page-content-wrap {
   width: 100%;
   .page-content-children {
+    position: relative;
     width: 100%;
     flex: 1;
   }
