--- a/client/src/pages/Main/componentsVp/VpMine/index.less
+++ b/client/src/pages/Main/componentsVp/VpMine/index.less
@@ -34,3 +34,10 @@
   font-size: var(--font-size-md);
   color: var(--color-gray-1);
 }
+
+.vp-mine-float-btn-panel {
+  position: fixed;
+  right: 80px;
+  bottom: 200px;
+  z-index: 10;
+}
