--- a/client/src/components/ListNode/index.less
+++ b/client/src/components/ListNode/index.less
@@ -17,6 +17,22 @@
   // }
 }
 
+.list-node-empty {
+  box-sizing: border-box;
+  margin: var(--margin-lg) 0;
+  padding: var(--padding-lg) 0;
+}
+
+.list-node-empty-img {
+  margin-bottom: var(--margin-md);
+  width: 600px;
+}
+
+.list-node-empty-text {
+  color: var(--color-gray-5);
+  font-size: var(--font-size-lg);
+}
+
 .list-node-loading-tip {
   width: 100%;
   height: 80px;
