--- a/client/src/pages/EditWorker/index.less
+++ b/client/src/pages/EditWorker/index.less
@@ -1,4 +1,5 @@
 .edit-worker-header {
+  margin-bottom: var(--margin-xs);
   box-sizing: border-box;
   width: 100%;
   background-color: var(--color-white);
@@ -19,6 +20,13 @@
   margin-left: var(--margin-base);
   color: var(--color-gray-3);
   font-size: var(--font-size-md);
+}
+
+.edit-worker-content {
+  box-sizing: border-box;
+  width: 100%;
+  z-index: 1;
+  padding: 0 var(--padding-xs);
 }
 
 .edit-worker-float-btn-panel {
