feat(PanelShare):优化生成海报时的页面loading展示

--- a/client/src/components/PanelShare/index.less
+++ b/client/src/components/PanelShare/index.less
@@ -4,15 +4,44 @@
   height: 1000px;
 }
 
+.panel-share-simple-wrap {
+  box-sizing: border-box;
+  margin-bottom: var(--margin-md);
+  padding: var(--padding-lg);
+  background-color: var(--color-white);
+}
+
 .panel-share-img {
+  width: 100%;
+}
+
+.panel-share-simple-footer {
+  margin-top: var(--padding-sm);
+  width: 100%;
+}
+
+.panel-share-simple-footer-left {
+  flex: 1;
+}
+
+.panel-share-simple-footer-left-avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+
+.panel-share-simple-footer-left-text {
+  margin-top: var(--padding-base);
+  font-size: 28px;
+  color: "#0e0e0e";
+}
+
+.panel-share-simple-footer-right {
+  width: 200px;
+  height: 200px;
 }
 
 .panel-share-button-refresh {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
 }
 
 .panel-share-text {
