--- a/client/src/components/ListNode/components/Worker/index.less
+++ b/client/src/components/ListNode/components/Worker/index.less
@@ -32,8 +32,20 @@
 
 .worker-item-mid-name {
   width: 100%;
+}
+
+.worker-item-mid-name-text {
+  margin-right: var(--margin-base);
   font-size: var(--font-size-md);
   color: var(--color-gray-1);
+}
+
+.worker-item-mid-name-sign {
+  padding: var(--padding-mini) var(--padding-base);
+  text-align: center;
+  font-size: var(--font-size-xs);
+  line-height: var(--font-size-xs);
+  border-radius: var(--border-radius-md);
 }
 
 .worker-item-mid-cellphone {
