--- a/client/src/components/Dialog/index.less
+++ b/client/src/components/Dialog/index.less
@@ -19,6 +19,7 @@
 }
 
 .dialog-panel-up {
+  position: relative;
   box-sizing: border-box;
   padding-bottom: 20px;
   width: 100%;
@@ -56,6 +57,10 @@
   box-sizing: border-box;
   width: 100%;
   height: 700px;
+}
+
+.dialog-panel-down-margin {
+  height: 760px;
 }
 
 .dialog-panel-footer {
