--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -30,6 +30,7 @@ page {
   --font-size-lg: 32px;
   --font-size-xl: 36px;
   --font-size-hd: 40px;
+  --font-size-bg: 52px;
   --font-size-icon: 64px;
 
   // 颜色
@@ -42,7 +43,6 @@ page {
   --color-gray-5: #bdbdbd;
   --color-gray-6: #e0e0e0;
   --color-gray-7: #eeeeee;
-  --color-gray-8: #f5f5f5;
   --color-gray-9: #fafafa;
 
   --color-red: #ef4136;
