feat:(EasterEgg)调整彩蛋模式展示形式

--- a/client/src/components/ListNode/components/Moment/index.less
+++ b/client/src/components/ListNode/components/Moment/index.less
@@ -1,8 +1,5 @@
 .moment-item {
-  padding: var(--padding-xs) var(--padding-md);
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  margin-bottom: var(--margin-xs);
   align-items: flex-start;
 
   .item-left {
@@ -13,57 +10,57 @@
     align-items: center;
 
     .item-logo {
-      width: 100%;
-      height: auto;
-      border-radius: var(--radius-sm, 10px);
+      width: 84px;
+      height: 84px;
+      border-radius: var(--border-radius-md);
     }
   }
 
   .item-right {
     flex: 1 1 auto;
-    margin-left: var(--padding-xs, 16px);
+    margin-left: var(--margin-xs);
 
     .item-author {
-      margin-bottom: var(--border-li-space, 4px);
+      margin-bottom: var(--margin-mini);
       width: 100%;
-      font-size: var(--f5);
+      font-size: var(--font-size-md);
       font-weight: bold;
-      color: var(--color-feed-author, rgb(100, 100, 140));
+      color: var(--color-feed-author);
     }
 
     .item-content {
-      margin-bottom: var(--border-li-space, 4px);
+      margin-bottom: var(--margin-mini);
       width: 100%;
-      font-size: var(--f5);
-      color: var(--color-text-long, #272637);
+      font-size: var(--font-size-md);
+      color: var(--color-gray-1);
       text-align: justify;
     }
 
     .item-media {
-      margin-bottom: var(--border-li-space, 4px);
+      margin-bottom: var(--margin-mini);
       width: 100%;
     }
 
     .item-adress {
-      margin-bottom: var(--border-li-space, 4px);
+      margin-bottom: var(--margin-mini);
       width: 100%;
-      font-size: var(--f6);
-      color: var(--color-link-normal, #576b96);
+      font-size: var(--font-size-md);
+      color: var(--color-link-normal);
     }
 
     .item-bottom {
       width: 100%;
       .item-time {
-        font-size: var(--f6);
-        color: var(--color-text-secondary, #888888);
+        font-size: var(--font-size-md);
+        color: var(--color-gray-3);
       }
       .item-options {
         width: 50px;
         height: 30px;
-        font-size: 30px;
-        border-radius: var(--radius-sm, 10px);
-        color: var(--color-feed-options-color, rgb(100, 100, 140));
-        background-color: var(--color-bg, #ebebeb);
+        font-size: var(--font-size-md);
+        border-radius: var(--border-radius-md);
+        color: var(--color-feed-author);
+        background-color: var(--color-gray-6);
       }
     }
   }
