--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -53,6 +53,10 @@ page {
 
   --color-man: #469ddc;
   --color-woman: #d32d7c;
+
+  --color-feed-author: #64648c;
+
+  --color-link-normal: #576b96;
 }
 
 .safe-top {
