--- a/client/src/less/iconfont.less
+++ b/client/src/less/iconfont.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2366471 */
-  src: url("//at.alicdn.com/t/font_2366471_56jslwjyo3f.woff2?t=1628324266033")
+  src: url("//at.alicdn.com/t/font_2366471_uvzufungf4i.woff2?t=1630214211958")
       format("woff2"),
-    url("//at.alicdn.com/t/font_2366471_56jslwjyo3f.woff?t=1628324266033")
+    url("//at.alicdn.com/t/font_2366471_uvzufungf4i.woff?t=1630214211958")
       format("woff"),
-    url("//at.alicdn.com/t/font_2366471_56jslwjyo3f.ttf?t=1628324266033")
+    url("//at.alicdn.com/t/font_2366471_uvzufungf4i.ttf?t=1630214211958")
       format("truetype");
 }
 
@@ -16,8 +16,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.iconboshimao:before {
-  content: "\e605";
+.iconqixiangjiance:before {
+  content: "\e6a7";
 }
 
 .iconleft_double:before {
