feat(DialogWorker):完善编辑职工信息第二分页

--- a/client/src/pages/EditWorker/components/DialogWorker/index.less
+++ b/client/src/pages/EditWorker/components/DialogWorker/index.less
@@ -32,6 +32,23 @@
   bottom: var(--margin-md);
 }
 
+.dialog-member-content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  justify-content: flex-start;
+}
+
+.dialog-member-scroll {
+  height: 540px;
+}
+
+.dialog-member-list {
+  box-sizing: border-box;
+  padding: 0 var(--padding-sm);
+}
+
 .animation-content-reset {
   animation-name: animation-reset;
   animation-duration: 0.5s;
