feat(PersonDetail):新增个人详情页

--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -45,6 +45,7 @@ page {
   --color-gray-7: #eeeeee;
   --color-gray-9: #fafafa;
 
+  --color-shadow: #bdbdbd;
   --color-red: #ef4136;
   --color-blue: #4444ff;
   --color-golden-light: #fae89b;
@@ -57,6 +58,8 @@ page {
   --color-feed-author: #64648c;
 
   --color-link-normal: #576b96;
+  --color-text-primary: #212121;
+  --color-text-secondary: #666666;
 }
 
 .safe-top {
