--- a/client/src/components/ButtonIcon/index.less
+++ b/client/src/components/ButtonIcon/index.less
@@ -1,17 +1,25 @@
 .button-icon-wrap {
-	display: block;
-	padding: 0;
+  box-sizing: border-box;
+  display: block;
+  padding: 0;
 
-	.button-iconfont-content {
-		width: 100%;
-		height: 100%;
-		color: var(--color-white, #ffffff);
-		font-size: 100px;
-		font-weight: bold;
-	}
+  .button-content {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    .button-iconfont-content {
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      color: var(--color-white, #ffffff);
+      font-size: 100px;
+      font-weight: bold;
+    }
 
-	.button-iconimg-content {
-		width: 100%;
-		height: 100%;
-	}
+    .button-iconimg-content {
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
