--- a/client/src/components/NavigationHeader/index.less
+++ b/client/src/components/NavigationHeader/index.less
@@ -1,5 +1,6 @@
 .navigation-header-wrap {
   position: relative;
+  flex: 0 0 auto;
   .navigation-header-fixed {
     position: fixed;
     left: 0;
