--- a/client/src/components/PageContent/index.less
+++ b/client/src/components/PageContent/index.less
@@ -6,6 +6,10 @@ page {
 
 .page-content-wrap {
   width: 100%;
+  height: 100vh;
+  min-height: 100%;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .page-content-children {
