--- a/client/src/pages/Main/componentsVp/VpHomeNormal/index.less
+++ b/client/src/pages/Main/componentsVp/VpHomeNormal/index.less
@@ -1,15 +1,11 @@
-.vp-test-wrap {
+.vp-home-normal-wrap {
   box-sizing: border-box;
   width: 100%;
 }
 
-.vp-test-content {
+.vp-home-normal-content {
   box-sizing: border-box;
   z-index: 1;
   width: 100%;
   padding: 0 var(--padding-xs);
-}
-
-.at-calendar {
-  width: 100%;
 }
