feat:(group)调整彩蛋页面,完善group分页

--- a/client/src/components/Tab/index.less
+++ b/client/src/components/Tab/index.less
@@ -1,8 +1,9 @@
 .tab-wrap {
-	.tab-title {
-	}
-	.tab-content {
-		.tab-value {
-		}
-	}
+  width: 100%;
+  .tab-title {
+  }
+  .tab-content {
+    .tab-value {
+    }
+  }
 }
