--- a/client/src/pages/Main/componentsVp/VpGroup/index.less
+++ b/client/src/pages/Main/componentsVp/VpGroup/index.less
@@ -1,11 +1,13 @@
 .vp-group-wrap {
   box-sizing: border-box;
   width: 100%;
-}
-
-.vp-group-content {
-  box-sizing: border-box;
-  z-index: 1;
-  width: 100%;
-  padding: 0 var(--padding-xs);
+  .vp-group-content {
+    box-sizing: border-box;
+    z-index: 1;
+    width: 100%;
+    padding: 0 var(--padding-xs);
+    .group-module-wrap {
+      margin-bottom: var(--margin-xs);
+    }
+  }
 }
