--- a/client/src/components/Menu/index.less
+++ b/client/src/components/Menu/index.less
@@ -1,4 +1,23 @@
 .menu-wrap {
-	.menu-item {
-	}
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  .menu-item {
+    // margin-bottom: var(--padding-sm);
+    .menu-item-icon {
+      overflow: hidden;
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      color: var(--color-white);
+      font-size: var(--font-size-hd);
+      font-weight: bold;
+    }
+
+    .menu-item-title {
+      margin-top: var(--padding-xs);
+      color: var(--color-text-primary);
+      font-size: var(--font-size-sm);
+    }
+  }
 }
