--- a/client/src/components/PageContent/index.less
+++ b/client/src/components/PageContent/index.less
@@ -18,3 +18,28 @@ page {
   width: 100%;
   flex: 1;
 }
+
+.page-content-test-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 200px;
+  background-color: transparent;
+  // pointer-events: none;
+}
+
+.page-content-test-btn {
+  z-index: 9999;
+  width: 100px;
+  height: 54px;
+  box-sizing: border-box;
+  background-color: var(--color-primary); // #00aa00;
+  border-radius: var(--border-radius-lg);
+  font-size: var(--font-size-md);
+  color: #ffffff;
+  text-align: center;
+  padding: var(--padding-xs);
+}
