feat:(ShowerVideo)新增视频播放组件

--- a/client/src/components/ButtonIcon/index.less
+++ b/client/src/components/ButtonIcon/index.less
@@ -1,7 +1,12 @@
 .button-icon-wrap {
+  border: none;
   box-sizing: border-box;
   display: block;
   padding: 0;
+
+  .at-button__wxbutton::after {
+    border: none;
+  }
 
   .button-content {
     box-sizing: border-box;
