fix(style):修复部分样式问题

--- a/client/src/components/PanelBottom/index.less
+++ b/client/src/components/PanelBottom/index.less
@@ -1,18 +1,19 @@
 .panel-bottom-wrap {
-	position: relative;
-	z-index: 1;
-	flex-grow: 0;
-	flex-shrink: 0;
+  position: relative;
+  z-index: 1;
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 100%;
 
-	.panel-box {
-		box-sizing: border-box;
-		// padding: var(--border-bold-space, 32px);
-	}
+  .panel-box {
+    box-sizing: border-box;
+    // padding: var(--border-bold-space, 32px);
+  }
 
-	.fixed-panel {
-		position: fixed;
-		left: 0;
-		right: 0;
-		bottom: 0;
-	}
+  .fixed-panel {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
