fix(Menu):完善menu组件

--- a/client/src/pages/Main/components/GroupInfo/index.less
+++ b/client/src/pages/Main/components/GroupInfo/index.less
@@ -9,6 +9,7 @@
     flex: 1 1 auto;
     align-items: flex-start;
     .group-info-item {
+      margin-bottom: var(--margin-mini);
       align-items: flex-start;
     }
     .group-info-icon {
@@ -29,6 +30,9 @@
     }
     .group-info-cellphone-text {
       font-size: var(--font-size-md);
+      color: var(--color-text-secondary);
+    }
+    .group-info-activated {
       color: var(--color-link-normal);
     }
   }
