--- a/client/src/pages/Main/componentsVp/VpGroup/index.less
+++ b/client/src/pages/Main/componentsVp/VpGroup/index.less
@@ -8,6 +8,7 @@
     padding: 0 var(--padding-xs);
     .group-module-wrap {
       margin-bottom: var(--margin-xs);
+      width: 100%;
     }
   }
 }
