--- a/client/src/components/ButtonIcon/index.less
+++ b/client/src/components/ButtonIcon/index.less
@@ -9,9 +9,27 @@
   }
 
   .button-content {
+    position: relative;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+
+    .button-content-bg {
+      width: 100%;
+      height: 100%;
+      color: var(--color-white, #ffffff);
+      font-size: var(--font-size-icon);
+      background-color: var(--color-shadow);
+    }
+
+    .button-real {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
     .button-iconfont-content {
       box-sizing: border-box;
       width: 100%;
