fix(Post):完善tab组件与帖子的交互

--- a/client/src/components/Menu/index.less
+++ b/client/src/components/Menu/index.less
@@ -15,7 +15,7 @@
     }
 
     .menu-item-title {
-      margin-top: var(--padding-xs);
+      margin-top: var(--margin-mini);
       color: var(--color-text-primary);
       font-size: var(--font-size-sm);
     }
