--- a/client/src/components/Tab/index.less
+++ b/client/src/components/Tab/index.less
@@ -1,9 +1,9 @@
 .tab-wrap {
   width: 100%;
-  .tab-title {
-  }
-  .tab-content {
-    .tab-value {
-    }
+  .tab-float-btn-panel {
+    position: fixed;
+    right: 80px;
+    bottom: 200px;
+    z-index: 10;
   }
 }
