--- a/client/src/components/LayoutPicker/index.less
+++ b/client/src/components/LayoutPicker/index.less
@@ -9,10 +9,15 @@
       }
     }
   }
+  .at-button__wxbutton::after {
+    border: none;
+  }
 
   .layout-picker-panel {
+    box-sizing: border-box;
     width: 100%;
     .layout-picker-item {
+      border: none;
       width: 100%;
       height: 88px;
       font-size: var(--font-size-lg);
